--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,6 @@
   font-weight: 200 800;
   font-display: block;
 }
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -44,7 +43,7 @@ header {
   color: #fff;
 }
 header #header_wrap {
-  width: 80%;
+  width: 85%;
   height: 100%;
   margin: 0 auto;
   display: flex;
@@ -56,7 +55,7 @@ header #header_wrap .header {
   font-family: "pretendard";
 }
 header #header_wrap .symbol {
-  width: 25%;
+  width: 30%;
   height: 100%;
 }
 header #header_wrap .symbol img {
@@ -78,7 +77,7 @@ header #header_wrap .name span {
   display: block;
 }
 header #header_wrap .nav {
-  width: 25%;
+  width: auto;
   height: 100%;
 }
 header #header_wrap .nav ul {
@@ -106,8 +105,8 @@ header #header_wrap .nav ul .first {
 }
 
 #nav-dots {
-  width: 5%;
-  height: 20vh;
+  width: auto;
+  height: auto;
   position: fixed;
   right: 50px;
   top: 50%;
@@ -198,37 +197,37 @@ header #header_wrap .nav ul .first {
   position: absolute;
   left: 0;
   top: 0;
-  background-color: black;
+  background-color: #121212;
 }
 .s_01 .hi__cuboid .face--front {
   width: 900px;
   height: 90px;
-  transform: translateZ(calc(90px/2));
+  transform: translateZ(calc(90px / 2));
 }
 .s_01 .hi__cuboid .face--back {
   width: 900px;
   height: 90px;
-  transform: translateZ(calc(90px/2 *-1)) rotateY(180deg) rotate(180deg);
+  transform: translateZ(calc(90px / 2 * -1)) rotateY(180deg) rotate(180deg);
 }
 .s_01 .hi__cuboid .face--left {
   width: 90px;
   height: 90px;
-  transform: translateX(calc(90px/2 *-1)) rotateY(-90deg);
+  transform: translateX(calc(90px / 2 * -1)) rotateY(-90deg);
 }
 .s_01 .hi__cuboid .face--right {
   width: 90px;
   height: 90px;
-  transform: translateX(calc(900px - 90px/2)) rotateY(90deg);
+  transform: translateX(calc(900px - 90px / 2)) rotateY(90deg);
 }
 .s_01 .hi__cuboid .face--top {
   width: 900px;
   height: 90px;
-  transform: translateY(calc(90px/2 * -1)) rotateX(90deg);
+  transform: translateY(calc(90px / 2 * -1)) rotateX(90deg);
 }
 .s_01 .hi__cuboid .face--bottom {
   width: 900px;
   height: 90px;
-  transform: translateY(calc(90px - 90px/2)) rotateX(-90deg);
+  transform: translateY(calc(90px - 90px / 2)) rotateX(-90deg);
 }
 .s_01 .face {
   display: flex;
@@ -238,7 +237,7 @@ header #header_wrap .nav ul .first {
 }
 .s_01 .face.face--top, .s_01 .face.face--bottom {
   background: white;
-  color: black;
+  color: #121212;
 }
 .s_01 .hi__word {
   margin: 0;
@@ -268,8 +267,8 @@ header #header_wrap .nav ul .first {
   flex-direction: column;
 }
 .s_02 .about_wrap .inner {
-  font-size: 6.5rem;
-  line-height: 10rem;
+  font-size: 6vw;
+  line-height: 9vw;
   text-align: center;
   margin-top: -10px;
   width: 100%;
@@ -287,7 +286,7 @@ header #header_wrap .nav ul .first {
   color: #fff;
 }
 .s_02 .about_wrap .inner h3 {
-  font-size: 3.5rem;
+  font-size: 3vw;
   margin-top: -10px;
   font-family: "Bandeins-Strange";
   animation: motion 0.5s linear 0s infinite alternate;
@@ -325,13 +324,13 @@ header #header_wrap .nav ul .first {
   padding-top: 8%;
   width: 100%;
   font-family: "Bandeins-Strange";
-  font-size: 4rem;
+  font-size: 3.5rem;
   color: #121212;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 }
 .s_02 .profile .profile_inner {
-  width: 85%;
-  height: 60%;
+  width: 80%;
+  height: auto;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -340,14 +339,6 @@ header #header_wrap .nav ul .first {
   position: relative;
   opacity: 0;
   transition: all 0.3s ease-in-out;
-}
-.s_02 .profile .profile_inner .inner_list_me {
-  width: 37%;
-  height: 85%;
-  background-image: url(../img/self.jpg);
-  background-size: cover;
-  background-position: center;
-  background-color: saddlebrown;
 }
 .s_02 .profile .profile_inner .list_wrap {
   width: auto;
@@ -385,18 +376,18 @@ header #header_wrap .nav ul .first {
   padding-top: 8%;
   width: 100%;
   font-family: "Bandeins-Strange";
-  font-size: 4rem;
-  color: #121212;
+  font-size: 3.5rem;
+  color: black;
   margin-bottom: 10px;
 }
 .s_02 .act .act_inner {
   width: 85%;
   height: 80%;
   margin: 0 auto;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   text-align: center;
   font-family: "pretendard";
-  color: #121212;
+  color: black;
   opacity: 0;
 }
 .s_02 .act .act_inner .inner_list {
@@ -428,7 +419,7 @@ header #header_wrap .nav ul .first {
   padding-top: 8%;
   width: 100%;
   font-family: "Bandeins-Strange";
-  font-size: 4rem;
+  font-size: 3.5rem;
   color: #121212;
   margin-bottom: 15px;
 }
@@ -437,12 +428,12 @@ header #header_wrap .nav ul .first {
   height: 80%;
   margin: 0 auto;
   font-family: "pretendard";
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   color: #121212;
   opacity: 0;
 }
 .s_02 .develop .develop_inner .inner_list {
-  margin-bottom: 50px;
+  margin-bottom: 35px;
 }
 .s_02 .develop .develop_inner .inner_list h3 {
   margin-bottom: 10px;
@@ -451,10 +442,10 @@ header #header_wrap .nav ul .first {
 .s_02 .develop .develop_inner .inner_list .import {
   word-break: keep-all;
   font-weight: 400;
-  line-height: 1.6rem;
+  line-height: 1.3rem;
 }
 .s_02 .develop .develop_inner .inner_list .tech {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
   margin-top: 10px;
 }
@@ -465,8 +456,8 @@ header #header_wrap .nav ul .first {
   padding: 5px 10px;
   background-color: #01C3FF;
   color: #fff;
-  font-size: 1rem;
-  line-height: 2.2rem;
+  font-size: 0.8rem;
+  line-height: 2rem;
 }
 .s_02 .develop:hover {
   bottom: 0;
@@ -476,7 +467,7 @@ header #header_wrap .nav ul .first {
 }
 
 .s_03 .project_wrap {
-  width: 1400px;
+  width: 1200px;
   height: 75vh;
   display: flex;
   justify-content: space-between;
@@ -505,7 +496,7 @@ header #header_wrap .nav ul .first {
   height: 100%;
 }
 .s_03 .project_wrap .project .project_container .text {
-  font-size: 6.8rem;
+  font-size: 6.5vw;
   letter-spacing: -0.01em;
   line-height: 100%;
   margin: 0;
@@ -762,7 +753,7 @@ header #header_wrap .nav ul .first {
   display: flex;
   width: 100%;
   height: 100%;
-  padding: calc(0.75rem*2);
+  padding: calc(0.75rem * 2);
 }
 .s_05 .logo > div {
   height: calc((100vw - 0.75rem * 4) * 0.1573);
@@ -786,19 +777,19 @@ header #header_wrap .nav ul .first {
 }
 .s_05 .logo > div.group-2 {
   animation-name: logoScaler_larger;
-  animation-delay: calc(7s/5);
+  animation-delay: calc(7s / 5);
 }
 .s_05 .logo > div.group-3 {
-  animation-delay: calc(7s/5 *2);
+  animation-delay: calc(7s / 5 * 2);
 }
 .s_05 .logo > div.group-4 {
-  animation-delay: calc(7s/5 *3);
+  animation-delay: calc(7s / 5 * 3);
 }
 .s_05 .logo > div.group-5 {
-  animation-delay: calc(7s/5 *4);
+  animation-delay: calc(7s / 5 * 4);
 }
 .s_05 .logo > div.group-6 {
-  animation-delay: calc(7s/5 *5);
+  animation-delay: calc(7s / 5 * 5);
 }
 .s_05 .logo .i {
   flex-grow: 0;
@@ -858,22 +849,6 @@ header #header_wrap .nav ul .first {
   bottom: 3%;
   line-height: 1.7rem;
   font-family: "pretendard", sans-serif;
-}
-.s_05 .drawing {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  mix-blend-mode: difference;
-  bottom: calc(0.75rem * 2);
-}
-.s_05 .drawing svg {
-  width: 100%;
-  height: 100%;
-}
-.s_05 .drawing svg path {
-  stroke-dasharray: 1;
-  stroke-dashoffset: 1;
 }
 @keyframes dash {
   from {
