--- a/style/index.scss
+++ b/style/index.scss
@@ -62,10 +62,9 @@ header {
     color: #fff;
 
     #header_wrap {
-        width: 80%;
+        width: 85%;
         height: 100%;
         margin: 0 auto;
-        // background-color: palegoldenrod;
 
         display: flex;
         justify-content: space-between;
@@ -78,7 +77,7 @@ header {
         }
 
         .symbol {
-            width: 25%;
+            width: 30%;
             height: 100%;
             // background-color: salmon;
 
@@ -109,9 +108,9 @@ header {
         }
 
         .nav {
-            width: 25%;
+            width: auto;
             height: 100%;
-            // background-color: paleturquoise;
+
 
             ul {
                 display: flex;
@@ -150,9 +149,8 @@ header {
 }
 
 #nav-dots {
-    width: 5%;
-    height: 20vh;
-    // background-color: palevioletred;
+    width: auto;
+    height: auto;
 
     position: fixed;
     right: 50px;
@@ -346,8 +344,8 @@ header {
         flex-direction: column;
 
         .inner {
-            font-size: 6.5rem;
-            line-height: 10rem;
+            font-size: 6vw;
+            line-height: 9vw;
             text-align: center;
             margin-top: -10px;
             width: 100%;
@@ -368,7 +366,7 @@ header {
             }
 
             h3 {
-                font-size: 3.5rem;
+                font-size: 3vw;
                 margin-top: -10px;
                 font-family: 'Bandeins-Strange';
                 animation: motion 0.5s linear 0s infinite alternate;
@@ -415,14 +413,14 @@ header {
             padding-top: 8%;
             width: 100%;
             font-family: 'Bandeins-Strange';
-            font-size: 4rem;
+            font-size: 3.5rem;
             color: #121212;
-            margin-bottom: 10px;
+            margin-bottom: 25px;
         }
 
         .profile_inner {
-            width: 85%;
-            height: 60%;
+            width: 80%;
+            height: auto;
             margin: 0 auto;
 
             display: flex;
@@ -435,14 +433,14 @@ header {
 
             transition: all 0.3s ease-in-out;
 
-            .inner_list_me {
-                width: 37%;
-                height: 85%;
-                background-image: url(../img/self.jpg);
-                background-size: cover;
-                background-position: center;
-                background-color: saddlebrown;
-            }
+            // .inner_list_me {
+            //     width: 37%;
+            //     height: 85%;
+            //     background-image: url(../img/self.jpg);
+            //     background-size: cover;
+            //     background-position: center;
+            //     background-color: saddlebrown;
+            // }
 
             .list_wrap {
                 width: auto;
@@ -489,7 +487,7 @@ header {
             padding-top: 8%;
             width: 100%;
             font-family: 'Bandeins-Strange';
-            font-size: 4rem;
+            font-size: 3.5rem;
             color: black;
             margin-bottom: 10px;
         }
@@ -498,7 +496,7 @@ header {
             width: 85%;
             height: 80%;
             margin: 0 auto;
-            font-size: 1.1rem;
+            font-size: 0.9rem;
             text-align: center;
             font-family: 'pretendard';
             color: black;
@@ -542,7 +540,7 @@ header {
             padding-top: 8%;
             width: 100%;
             font-family: 'Bandeins-Strange';
-            font-size: 4rem;
+            font-size: 3.5rem;
             color: #121212;
             margin-bottom: 15px;
         }
@@ -552,13 +550,13 @@ header {
             height: 80%;
             margin: 0 auto;
             font-family: 'pretendard';
-            font-size: 1.2rem;
+            font-size: 0.9rem;
             color: #121212;
 
             opacity: 0;
 
             .inner_list {
-                margin-bottom: 50px;
+                margin-bottom: 35px;
 
                 h3 {
                     margin-bottom: 10px;
@@ -568,13 +566,14 @@ header {
                 .import {
                     word-break: keep-all;
                     font-weight: 400;
-                    line-height: 1.6rem;
+                    line-height: 1.3rem;
                 }
 
                 .tech {
-                    width: 80%;
+                    width: 85%;
                     margin: 0 auto;
                     margin-top: 10px;
+
 
                     span {
                         word-break: keep-all;
@@ -583,8 +582,8 @@ header {
                         padding: 5px 10px;
                         background-color: #01C3FF;
                         color: #fff;
-                        font-size: 1rem;
-                        line-height: 2.2rem;
+                        font-size: 0.8rem;
+                        line-height: 2rem;
                     }
                 }
             }
@@ -605,7 +604,7 @@ header {
 //project
 .s_03 {
     .project_wrap {
-        width: 1400px;
+        width: 1200px;
         height: 75vh;
         display: flex;
         justify-content: space-between;
@@ -635,7 +634,7 @@ header {
                 height: 100%;
 
                 .text {
-                    font-size: 6.8rem;
+                    font-size: 6.5vw;
                     letter-spacing: -.01em;
                     line-height: 100%;
                     margin: 0;
