--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@ header {
   color: #fff;
 }
 header #header_wrap {
-  width: 85%;
+  width: 80%;
   height: 100%;
   margin: 0 auto;
   display: flex;
@@ -55,7 +55,7 @@ header #header_wrap .header {
   font-family: "pretendard";
 }
 header #header_wrap .symbol {
-  width: 30%;
+  width: 25%;
   height: 100%;
 }
 header #header_wrap .symbol img {
@@ -77,7 +77,7 @@ header #header_wrap .name span {
   display: block;
 }
 header #header_wrap .nav {
-  width: auto;
+  width: 25%;
   height: 100%;
 }
 header #header_wrap .nav ul {
@@ -105,8 +105,8 @@ header #header_wrap .nav ul .first {
 }
 
 #nav-dots {
-  width: auto;
-  height: auto;
+  width: 5%;
+  height: 20vh;
   position: fixed;
   right: 50px;
   top: 50%;
@@ -267,8 +267,8 @@ header #header_wrap .nav ul .first {
   flex-direction: column;
 }
 .s_02 .about_wrap .inner {
-  font-size: 6vw;
-  line-height: 9vw;
+  font-size: 6.5rem;
+  line-height: 10rem;
   text-align: center;
   margin-top: -10px;
   width: 100%;
@@ -286,7 +286,7 @@ header #header_wrap .nav ul .first {
   color: #fff;
 }
 .s_02 .about_wrap .inner h3 {
-  font-size: 3vw;
+  font-size: 3.5rem;
   margin-top: -10px;
   font-family: "Bandeins-Strange";
   animation: motion 0.5s linear 0s infinite alternate;
@@ -324,13 +324,13 @@ header #header_wrap .nav ul .first {
   padding-top: 8%;
   width: 100%;
   font-family: "Bandeins-Strange";
-  font-size: 3.5rem;
+  font-size: 4rem;
   color: #121212;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
 }
 .s_02 .profile .profile_inner {
-  width: 80%;
-  height: auto;
+  width: 85%;
+  height: 60%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -339,6 +339,14 @@ header #header_wrap .nav ul .first {
   position: relative;
   opacity: 0;
   transition: all 0.3s ease-in-out;
+}
+.s_02 .profile .profile_inner .inner_list_me {
+  width: 37%;
+  height: 85%;
+  background-image: url(../img/self.jpg);
+  background-size: cover;
+  background-position: center;
+  background-color: saddlebrown;
 }
 .s_02 .profile .profile_inner .list_wrap {
   width: auto;
@@ -376,7 +384,7 @@ header #header_wrap .nav ul .first {
   padding-top: 8%;
   width: 100%;
   font-family: "Bandeins-Strange";
-  font-size: 3.5rem;
+  font-size: 4rem;
   color: black;
   margin-bottom: 10px;
 }
@@ -384,7 +392,7 @@ header #header_wrap .nav ul .first {
   width: 85%;
   height: 80%;
   margin: 0 auto;
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   text-align: center;
   font-family: "pretendard";
   color: black;
@@ -419,7 +427,7 @@ header #header_wrap .nav ul .first {
   padding-top: 8%;
   width: 100%;
   font-family: "Bandeins-Strange";
-  font-size: 3.5rem;
+  font-size: 4rem;
   color: #121212;
   margin-bottom: 15px;
 }
@@ -428,12 +436,12 @@ header #header_wrap .nav ul .first {
   height: 80%;
   margin: 0 auto;
   font-family: "pretendard";
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   color: #121212;
   opacity: 0;
 }
 .s_02 .develop .develop_inner .inner_list {
-  margin-bottom: 35px;
+  margin-bottom: 50px;
 }
 .s_02 .develop .develop_inner .inner_list h3 {
   margin-bottom: 10px;
@@ -442,10 +450,10 @@ header #header_wrap .nav ul .first {
 .s_02 .develop .develop_inner .inner_list .import {
   word-break: keep-all;
   font-weight: 400;
-  line-height: 1.3rem;
+  line-height: 1.6rem;
 }
 .s_02 .develop .develop_inner .inner_list .tech {
-  width: 85%;
+  width: 80%;
   margin: 0 auto;
   margin-top: 10px;
 }
@@ -456,8 +464,8 @@ header #header_wrap .nav ul .first {
   padding: 5px 10px;
   background-color: #01C3FF;
   color: #fff;
-  font-size: 0.8rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 2.2rem;
 }
 .s_02 .develop:hover {
   bottom: 0;
@@ -467,7 +475,7 @@ header #header_wrap .nav ul .first {
 }
 
 .s_03 .project_wrap {
-  width: 1200px;
+  width: 1400px;
   height: 75vh;
   display: flex;
   justify-content: space-between;
@@ -496,7 +504,7 @@ header #header_wrap .nav ul .first {
   height: 100%;
 }
 .s_03 .project_wrap .project .project_container .text {
-  font-size: 6.5vw;
+  font-size: 6.8rem;
   letter-spacing: -0.01em;
   line-height: 100%;
   margin: 0;
