--- a/style/index.scss
+++ b/style/index.scss
@@ -62,9 +62,10 @@ header {
     color: #fff;
 
     #header_wrap {
-        width: 85%;
+        width: 80%;
         height: 100%;
         margin: 0 auto;
+        // background-color: palegoldenrod;
 
         display: flex;
         justify-content: space-between;
@@ -77,7 +78,7 @@ header {
         }
 
         .symbol {
-            width: 30%;
+            width: 25%;
             height: 100%;
             // background-color: salmon;
 
@@ -108,9 +109,9 @@ header {
         }
 
         .nav {
-            width: auto;
+            width: 25%;
             height: 100%;
-
+            // background-color: paleturquoise;
 
             ul {
                 display: flex;
@@ -149,8 +150,9 @@ header {
 }
 
 #nav-dots {
-    width: auto;
-    height: auto;
+    width: 5%;
+    height: 20vh;
+    // background-color: palevioletred;
 
     position: fixed;
     right: 50px;
@@ -344,8 +346,8 @@ header {
         flex-direction: column;
 
         .inner {
-            font-size: 6vw;
-            line-height: 9vw;
+            font-size: 6.5rem;
+            line-height: 10rem;
             text-align: center;
             margin-top: -10px;
             width: 100%;
@@ -366,7 +368,7 @@ header {
             }
 
             h3 {
-                font-size: 3vw;
+                font-size: 3.5rem;
                 margin-top: -10px;
                 font-family: 'Bandeins-Strange';
                 animation: motion 0.5s linear 0s infinite alternate;
@@ -413,14 +415,14 @@ header {
             padding-top: 8%;
             width: 100%;
             font-family: 'Bandeins-Strange';
-            font-size: 3.5rem;
+            font-size: 4rem;
             color: #121212;
-            margin-bottom: 25px;
+            margin-bottom: 10px;
         }
 
         .profile_inner {
-            width: 80%;
-            height: auto;
+            width: 85%;
+            height: 60%;
             margin: 0 auto;
 
             display: flex;
@@ -433,14 +435,14 @@ header {
 
             transition: all 0.3s ease-in-out;
 
-            // .inner_list_me {
-            //     width: 37%;
-            //     height: 85%;
-            //     background-image: url(../img/self.jpg);
-            //     background-size: cover;
-            //     background-position: center;
-            //     background-color: saddlebrown;
-            // }
+            .inner_list_me {
+                width: 37%;
+                height: 85%;
+                background-image: url(../img/self.jpg);
+                background-size: cover;
+                background-position: center;
+                background-color: saddlebrown;
+            }
 
             .list_wrap {
                 width: auto;
@@ -487,7 +489,7 @@ header {
             padding-top: 8%;
             width: 100%;
             font-family: 'Bandeins-Strange';
-            font-size: 3.5rem;
+            font-size: 4rem;
             color: black;
             margin-bottom: 10px;
         }
@@ -496,7 +498,7 @@ header {
             width: 85%;
             height: 80%;
             margin: 0 auto;
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             text-align: center;
             font-family: 'pretendard';
             color: black;
@@ -540,7 +542,7 @@ header {
             padding-top: 8%;
             width: 100%;
             font-family: 'Bandeins-Strange';
-            font-size: 3.5rem;
+            font-size: 4rem;
             color: #121212;
             margin-bottom: 15px;
         }
@@ -550,13 +552,13 @@ header {
             height: 80%;
             margin: 0 auto;
             font-family: 'pretendard';
-            font-size: 0.9rem;
+            font-size: 1.2rem;
             color: #121212;
 
             opacity: 0;
 
             .inner_list {
-                margin-bottom: 35px;
+                margin-bottom: 50px;
 
                 h3 {
                     margin-bottom: 10px;
@@ -566,14 +568,13 @@ header {
                 .import {
                     word-break: keep-all;
                     font-weight: 400;
-                    line-height: 1.3rem;
+                    line-height: 1.6rem;
                 }
 
                 .tech {
-                    width: 85%;
+                    width: 80%;
                     margin: 0 auto;
                     margin-top: 10px;
-
 
                     span {
                         word-break: keep-all;
@@ -582,8 +583,8 @@ header {
                         padding: 5px 10px;
                         background-color: #01C3FF;
                         color: #fff;
-                        font-size: 0.8rem;
-                        line-height: 2rem;
+                        font-size: 1rem;
+                        line-height: 2.2rem;
                     }
                 }
             }
@@ -604,7 +605,7 @@ header {
 //project
 .s_03 {
     .project_wrap {
-        width: 1200px;
+        width: 1400px;
         height: 75vh;
         display: flex;
         justify-content: space-between;
@@ -634,7 +635,7 @@ header {
                 height: 100%;
 
                 .text {
-                    font-size: 6.5vw;
+                    font-size: 6.8rem;
                     letter-spacing: -.01em;
                     line-height: 100%;
                     margin: 0;
