--- a/style/index.css
+++ b/style/index.css
@@ -343,7 +343,7 @@ header #header_wrap .nav ul .first {
 .s_02 .profile .profile_inner .inner_list_me {
   width: 37%;
   height: 85%;
-  background-image: url(../img/self.jpg);
+  background-image: url(../img/my.jpg);
   background-size: cover;
   background-position: center;
   background-color: saddlebrown;
@@ -403,6 +403,7 @@ header #header_wrap .nav ul .first {
 }
 .s_02 .act .act_inner .inner_list h3 {
   margin-bottom: 3px;
+  text-decoration: underline;
 }
 .s_02 .act .act_inner .inner_list .import {
   font-weight: 700;
@@ -477,9 +478,7 @@ header #header_wrap .nav ul .first {
 .s_03 .project_wrap {
   width: 1400px;
   height: 75vh;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
+  margin: 0 auto;
   margin-top: 50px;
 }
 .s_03 .project_wrap .project {
@@ -607,6 +606,43 @@ header #header_wrap .nav ul .first {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+.s_03 .design {
+  width: 50%;
+  height: 5%;
+  text-align: left;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  transition: all 0.3s linear;
+  cursor: pointer;
+}
+.s_03 .design .more_project {
+  text-align: left;
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  margin-left: 10px;
+}
+.s_03 .design .plus_icon {
+  width: 24px;
+  height: 24px;
+  position: relative;
+}
+.s_03 .design .plus_icon img {
+  width: 100%;
+  position: absolute;
+}
+.s_03 .design .plus_icon .orange {
+  display: none;
+}
+.s_03 .design:hover {
+  color: #FE3C00;
+}
+.s_03 .design:hover .orange {
+  display: block;
+}
+.s_03 .design:hover .white {
+  display: none;
 }
 
 .s_04 {
