--- a/style/index.scss
+++ b/style/index.scss
@@ -438,7 +438,7 @@ header {
             .inner_list_me {
                 width: 37%;
                 height: 85%;
-                background-image: url(../img/self.jpg);
+                background-image: url(../img/my.jpg);
                 background-size: cover;
                 background-position: center;
                 background-color: saddlebrown;
@@ -510,6 +510,7 @@ header {
 
                 h3 {
                     margin-bottom: 3px;
+                    text-decoration: underline;
                 }
 
                 .import {
@@ -607,9 +608,7 @@ header {
     .project_wrap {
         width: 1400px;
         height: 75vh;
-        display: flex;
-        justify-content: space-between;
-        position: relative;
+        margin: 0 auto;
         margin-top: 50px;
 
         .project {
@@ -755,6 +754,55 @@ header {
             background-size: contain;
             background-position: center;
         }
+    }
+
+    .design{
+        width: 50%;
+        height: 5%;
+        text-align: left;
+        color: #fff;
+
+        display: flex;
+        align-items: center;
+
+        transition: all 0.3s linear;
+
+        cursor: pointer;
+
+
+        .more_project{
+            text-align: left;
+            font-family: 'Poppins', sans-serif;
+            font-size: 1.5rem;
+            margin-left: 10px;
+        }
+
+        .plus_icon{
+            width: 24px;
+            height: 24px;
+            position: relative;
+
+            img{
+                width: 100%;
+                position: absolute;
+            }
+
+            .orange{
+                display: none;
+            }
+        }
+    }
+
+    .design:hover {
+        color: $pointColor;
+    }
+
+    .design:hover .orange{
+        display: block;
+    }
+
+    .design:hover .white{
+        display: none;
     }
 }
 
