--- a/style/index.scss
+++ b/style/index.scss
@@ -760,7 +760,7 @@ header {
         width: 50%;
         height: 5%;
         text-align: left;
-        color: #fff;
+        color: #B6B6B6;
 
         display: flex;
         align-items: center;
