--- a/style/index.css
+++ b/style/index.css
@@ -611,7 +611,7 @@ header #header_wrap .nav ul .first {
   width: 50%;
   height: 5%;
   text-align: left;
-  color: #fff;
+  color: #B6B6B6;
   display: flex;
   align-items: center;
   transition: all 0.3s linear;
