--- a/style/index.scss
+++ b/style/index.scss
@@ -339,266 +339,68 @@ header {
     overflow: hidden;
 
     .about_wrap {
-        width: 1400px;
-        height: 60vh;
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-
-        .inner {
-            font-size: 5.5rem;
-            line-height: 10rem;
-            text-align: center;
-            margin-top: -10px;
-            width: 100%;
-            color: #e1e1e1;
-
-            h1 {
-                font-family: 'Bandeins-Strange';
-                font-weight: bold;
-
-                span {
-                    font-family: 'Poppins';
-                    font-style: italic;
-                    font-weight: 800;
-                    text-decoration: underline;
-                    color: #fff;
-                }
-            }
-
-            h3 {
-                font-size: 3rem;
-                margin-top: -10px;
-                font-family: 'Bandeins-Strange';
-                animation: motion 0.5s linear 0s infinite alternate;
-
-                span {
-                    margin-right: 5px;
-                }
-            }
-
-            @keyframes motion {
-                0% {
-                    margin-top: 0px;
-                }
-
-                100% {
-                    margin-top: 10px;
-                }
-            }
-        }
-
-        .inner_right {
-            width: auto;
-
-            p {
-                text-align: left;
-                font-size: 1.5rem;
-                font-family: 'pretendard';
-            }
-        }
-    }
-
-    .profile {
-        position: absolute;
-        bottom: -30%;
-        left: 0;
-        width: 33.33%;
+        width: 80%;
         height: 60%;
-        background-color: #FFAD04;
 
-        transition: all 0.3s ease-in-out;
-        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-        .headline {
-            padding-top: 8%;
-            width: 100%;
-            font-family: 'Bandeins-Strange';
-            font-size: 4rem;
-            color: #121212;
-            margin-bottom: 10px;
-        }
-
-        .profile_inner {
-            width: 85%;
-            height: 60%;
-            margin: 0 auto;
-
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-end;
-            color: #121212;
+        .left_thumb {
+            width: 30%;
+            height: 100%;
 
             position: relative;
-            opacity: 0;
+            overflow: hidden;
 
-            transition: all 0.3s ease-in-out;
+            img{
+                width: 100%;
+                filter: grayscale(20%);
 
-            .inner_list_me {
-                width: 37%;
-                height: 85%;
-                background-image: url(../img/my.jpg);
-                background-size: cover;
-                background-position: center;
-                background-color: saddlebrown;
+                position: absolute;
+                transform: translate(-50%,-50%);
+                top: 50%;
+                left: 50%;
             }
+        }
 
-            .list_wrap {
-                width: auto;
-                height: auto;
-                font-size: 1.1rem;
+        .right_text{
+            width: 60%;
+            height: 100%;
+
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: center;
+
+            .text_box {
+                width: 50%;
+                height: 35%;
                 text-align: left;
-                font-family: 'pretendard', sans-serif;
+                background-color: darkgoldenrod;
 
-                .inner_list {
-                    margin-bottom: 15px;
-
-                    span {
-                        font-size: 1rem;
-                    }
+                h1 {
+                    font-size: 1.6rem;
+                    margin-bottom: 20px;
                 }
 
-                .inner_list:last-of-type {
-                    margin-bottom: 0;
-                }
-            }
-        }
-    }
-
-    .profile:hover {
-        bottom: 0;
-    }
-
-    .profile:hover .profile_inner {
-        opacity: 1;
-    }
-
-    .act {
-        position: absolute;
-        bottom: -40%;
-        left: 33.33%;
-        width: 33.33%;
-        height: 70%;
-        background-color: $pointColor;
-
-        transition: all 0.3s ease-in-out;
-        cursor: pointer;
-
-        .headline {
-            padding-top: 8%;
-            width: 100%;
-            font-family: 'Bandeins-Strange';
-            font-size: 4rem;
-            color: black;
-            margin-bottom: 10px;
-        }
-
-        .act_inner {
-            width: 85%;
-            height: 80%;
-            margin: 0 auto;
-            font-size: 1.1rem;
-            text-align: center;
-            font-family: 'pretendard';
-            color: black;
-
-            opacity: 0;
-
-            .inner_list {
-                margin-bottom: 15px;
-
-                h3 {
-                    margin-bottom: 3px;
-                    text-decoration: underline;
-                }
-
-                .import {
-                    font-weight: 700;
-                }
-            }
-        }
-    }
-
-    .act:hover {
-        bottom: 0;
-    }
-
-    .act:hover .act_inner {
-        opacity: 1;
-    }
-
-    .develop {
-        position: absolute;
-        bottom: -50%;
-        right: 0;
-        width: 33.33%;
-        height: 80%;
-        background-color: #01C3FF;
-
-        transition: all 0.4s ease-in-out;
-        cursor: pointer;
-
-        .headline {
-            padding-top: 8%;
-            width: 100%;
-            font-family: 'Bandeins-Strange';
-            font-size: 4rem;
-            color: #121212;
-            margin-bottom: 15px;
-        }
-
-        .develop_inner {
-            width: 80%;
-            height: 80%;
-            margin: 0 auto;
-            font-family: 'pretendard';
-            font-size: 1.2rem;
-            color: #121212;
-
-            opacity: 0;
-
-            .inner_list {
-                margin-bottom: 50px;
-
-                h3 {
-                    margin-bottom: 10px;
-                    text-decoration: underline;
-                }
-
-                .import {
+                table {
+                    font-size: 1.2rem;
                     word-break: keep-all;
-                    font-weight: 400;
-                    line-height: 1.6rem;
-                }
+                    font-family: 'pretendard';
 
-                .tech {
-                    width: 80%;
-                    margin: 0 auto;
-                    margin-top: 10px;
+                    th {
+                        padding-right: 20px;
+                        padding-bottom: 5px;
+                    }
 
-                    span {
-                        word-break: keep-all;
-                        border: 1px solid rgb(230, 248, 250);
-                        border-radius: 10px;
-                        padding: 5px 10px;
-                        background-color: #01C3FF;
-                        color: #fff;
-                        font-size: 1rem;
-                        line-height: 2.2rem;
+                    td {
+                        padding-bottom: 5px;
                     }
                 }
             }
         }
     }
-
-    .develop:hover {
-        bottom: 0;
-    }
-
-    .develop:hover .develop_inner {
-        opacity: 1;
-    }
-
 
 }
 
